packages/frontend/src/features/CategoryProductList/components/SubcategoryProductList/index.module.css
.product-list-category-group {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    gap: 16px;

    clip-path: polygon(-10% -10%, 110% -10%, 110% 100%, -10% 100%);

    padding: 16px 0px;

    @media (min-width: $mantine-breakpoint-xs) {
        grid-template-columns: repeat(2, 1fr);
    }

    @media (min-width: $mantine-breakpoint-md) {
        grid-template-columns: repeat(3, 1fr);
    }

    @media (min-width: $mantine-breakpoint-lg) {
        grid-template-columns: repeat(4, 1fr);
    }
}

.subcategory-information {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.subcategory-name {
    color: black;
    font-family: var(--font-primary);
    font-size: 1.8rem;
    font-weight: 500;

    @media (min-width: $mantine-breakpoint-xs) {
        font-size: 2rem;
    }
}

.subcategory-description {
    color: black;
    font-family: var(--font-primary);
    font-size: 0.86rem;
    font-weight: 300;

    @media (min-width: $mantine-breakpoint-xs) {
        font-size: 0.92rem;
    }
}

.shop-all-button {
    flex-shrink: 0;

    font-family: var(--font-primary);
    font-size: 0.86rem;

    width: calc(100% + 8px);
    padding: 8px;
    margin-left: -8px;

    @media (min-width: $mantine-breakpoint-xs) {
        font-size: 0.92rem;
    }
}

.shop-all-button:focus-visible {
    outline: 2px solid #000;
    outline-offset: -1px;
    border-radius: 0px;
}

.shop-all-button:active {
    background-color: rgba(0, 0, 0, 0.1);
}

